# widgetTestOne

./: CMakeLists.txt  CMakeLists.txt.user.49d56c5  DelayedInitializationWidget.h  MyWidgetCollectionPlugin.cpp  MyWidgetCollectionPlugin.h  SliderText.cpp  elayedInitializationWidget.h  mywidgetcollectionplugin.json  slidertext.h  slidertextplugin.cpp  slidertextplugin.h  slidertextplugin.json  widgetTestOne_global.h  widgettestone.cpp  widgettestone.h
build-widgetTestOne-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-widgetTestOne-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-806865c606fe13f357a1.json  cmakeFiles-v1-6941d9b4b2ffd2a74696.json  codemodel-v2-b5f4b5663af2e5eb0a6e.json  index-2023-06-08T19-36-49-0142.json  target-widgetTestOne-Debug-79f09bc9f2f325d54a06.json
build-widgetTestOne-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-widgetTestOne-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/widgetTestOne_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-widgetTestOne-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/widgetTestOne_autogen/EWIEGA46WW/: moc_MyWidgetCollectionPlugin.cpp  moc_MyWidgetCollectionPlugin.cpp.d  moc_MyWidgetCollectionPlugins.cpp  moc_MyWidgetCollectionPlugins.cpp.d  moc_slidertext.cpp  moc_slidertext.cpp.d  moc_slidertextplugin.cpp  moc_slidertextplugin.cpp.d
build-widgetTestOne-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/widgetTestOne_autogen/include/: MyWidgetCollectionPlugin.moc.d
(+343 files in other folders)
